--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+      location: C:/temp/upload/
   security:
     oauth2:
       client:
@@ -24,4 +25,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+file:
+  dir: C:/temp/upload/
 
