240326 비밀번호 이메일로 보내기 및 비밀번호 찾기 수정.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,4 +25,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: t3reego@gmail.com
+    password: 3gogogo!
+    properties:
+      mail.smtp.auth: true
+      mail.stmp.starttls.enable: true
