--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,8 +28,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: t3reego@gmail.com
-    password: 3gogogo!
+    username: threeGo
+    password: nnpl vskg fkep zwqk
     properties:
       mail.smtp.auth: true
-      mail.stmp.starttls.enable: true
+      mail.smtp.starttls.enable: true
