이메일인증

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,11 @@ server.servlet.encoding.force=true
 
 spring.webservice.intro= /review
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=t3reego@gmail.com
+spring.mail.password=nnpl vskg fkep zwqk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
 mail.smtp.ssl.enable=true
-
