--- a/.github/workflows/dulle-dulle-ci-setting.yml
+++ b/.github/workflows/dulle-dulle-ci-setting.yml
@@ -83,4 +83,7 @@ jobs:
           script: |
             sudo docker stop $(sudo docker ps -qa)
             sudo docker rm $(sudo docker ps -qa)
-            sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/dulle-dulle-springboot
+            sudo docker run -d -p 8080:8080 \
+            -v /etc/localtime:/etc/localtime:ro \
+            -e TZ=Asia/Seoul \
+            ${{ secrets.DOCKER_USERNAME }}/dulle-dulle-springboot
