--- a/.github/workflows/dulle-dulle-ci-setting.yml
+++ b/.github/workflows/dulle-dulle-ci-setting.yml
@@ -45,14 +45,10 @@ jobs:
       run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
 
     # Gradle 설정 및 Build
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-
-    - name: Change gradlew permissions
-      run: chmod +x ./gradlew
-
-    - name: Build with Gradle Wrapper
-      run: ./gradlew clean build
+    - name: Build with Gradle
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      with:
+        arguments: clean bootJar
 
     # Docker 로그인
     - name: Docker Login
@@ -86,4 +82,4 @@ jobs:
             sudo docker run -d -p 8080:8080 \
             -v /etc/localtime:/etc/localtime:ro \
             -e TZ=Asia/Seoul \
-            ${{ secrets.DOCKER_USERNAME }}/dulle-dulle-springboot
+            ${{ secrets.DOCKER_USERNAME }}/dulle-dulle-springboot:latest
